samples/_failures_safe/1761002433_abda5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e1534ad.c: In function ‘main’:
./samples/SAFE/__tmp_0e1534ad.c:175:25: error: expected ‘;’ at end of input
  175 |     for (size_t i = 0; i
      |                         ^
      |                         ;
./samples/SAFE/__tmp_0e1534ad.c:175:5: error: expected declaration or statement at end of input
  175 |     for (size_t i = 0; i
      |     ^~~
